tests/macro-tests/cases/widget_new/missing_arg1.stderr
error[E0061]: this method takes 2 arguments but 1 argument was supplied
  --> cases/widget_new/missing_arg1.rs:11:9
   |
10 |       let _ = Wgt! {
   |  _____________-
11 | |         background_gradient = 0.deg(), ;
   | |         ^^^^^^^^^^^^^^^^^^^
12 | |         margin = 0;
13 | |     };
   | |_____- argument #2 is missing
   |
note: method defined here
  --> $WORKSPACE/crates/zng-wgt-fill/src/lib.rs
   |
   | pub fn background_gradient(child: impl IntoUiNode, axis: impl IntoVar<LinearGradientAxis>, stops: impl IntoVar<GradientStops>) -> UiNode {
   |        ^^^^^^^^^^^^^^^^^^^
help: provide the argument
  --> $WORKSPACE/crates/zng-wgt/src/wgt.rs
   |
   - #[widget($crate::Wgt)]
   + (0.deg(), /* stops */)
   |
